[package]
name = "std"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zephyr = { path = "../zephyr"}

[features]
# These two feature determine whether to use user or kernel mode syscall
# bindings. If neither or both are set, the runtime-detect syscalls will be
# used.
kernelmode = []
usermode = []
