[package]
name = "zephyr"
description = "Safe bindings to Zephyr kernel API"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

[dependencies]
libc = { path = "../libc" }

zephyr-sys = { path = "../zephyr-sys" }
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }
derive_more = { version = '0.14.1', default-features = false, features = ['no_std'] }

[features]
usermode = []
rustc-dep-of-std = ['core', 'compiler_builtins', 'zephyr-sys/rustc-dep-of-std']
