[package]
name = "compiler_builtins"
version = "0.1.19"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

[dependencies]
# For more information on this dependency see rust-lang/rust's
# `src/tools/rustc-std-workspace` folder
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }

[build-dependencies]
cc = { optional = true, version = "1.0" }

[features]
default = ["compiler-builtins"]

# Enable compilation of C code in compiler-rt, filling in some more optimized
# implementations and also filling in unimplemented intrinsics
c = ["cc"]

# Flag this library as the unstable compiler-builtins lib
compiler-builtins = []

# Generate memory-related intrinsics like memcpy
mem = []

# Mangle all names so this can be linked in with other versions or other
# compiler-rt implementations. Also used for testing
mangled-names = []

# Don't generate lang items for i128 intrisnics and such
no-lang-items = []

# Only used in the compiler's build system
rustc-dep-of-std = ['compiler-builtins', 'core']

