[package]
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
name = "sysroot"
version = "0.0.0"
repository = "https://github.com/tylerwhall/zephyr-rust.git"

[dependencies.std]
path = "../rust/library/std"

[patch.crates-io]
libc = { path = '../libc' }

rustc-std-workspace-core = { path = '../rust/library/rustc-std-workspace-core' }
rustc-std-workspace-alloc = { path = '../rust/library/rustc-std-workspace-alloc' }

[profile.release]
lto = true
panic = "abort"
debug = true
