[package]
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
name = "sysroot"
version = "0.0.0"

[dependencies.std]
path = "../rust/src/libstd"

[patch.crates-io.compiler_builtins]
path = "../compiler_builtins"

[patch.crates-io.libc]
path = "../libc"

[patch.crates-io.rustc-std-workspace-alloc]
path = "../rust/src/tools/rustc-std-workspace-alloc"

[patch.crates-io.rustc-std-workspace-core]
path = "../rust/src/tools/rustc-std-workspace-core"

[profile.release]
lto = true
panic = "abort"
debug = true
