[package]
name = "zephyr-core"
description = "Safe bindings to Zephyr kernel API (only using libcore)"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

[dependencies]
zephyr-sys = { path = "../zephyr-sys" }
alloc = { path = "../rust/library/alloc" }
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }
derive_more = { version = '0.14.1', default-features = false, features = ['no_std'] }
libc = "0.2"

time-convert = { path = "./time-convert" }

[features]
defaults = [ 'rustc-dep-of-std' ]
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std', 'zephyr-sys/rustc-dep-of-std', 'libc/rustc-dep-of-std', 'time-convert/rustc-dep-of-std']
have_std = []
