[package]
name = "zephyr-sys"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }
libc = "0.2"

[features]
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std', 'libc/rustc-dep-of-std']
