[package]
name = "rust-app"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
cstr = "0.1.7"
# Fix these path dependencies
zephyr-sys = { path = "../../rust/zephyr-sys" }
zephyr = { path = "../../rust/zephyr", features = ["have_std"] }
zephyr-macros = { path = "../../rust/zephyr-macros" }
zephyr-logger = { path = "../../rust/zephyr-logger" }
log = "0.4"

[profile.release]
panic = "abort"
lto = true
debug = true
