[package]
name = "app"
version = "0.1.0"
authors = ["Tyler Hall <tylerwhall@gmail.com>"]
repository = "https://github.com/tylerwhall/zephyr-rust.git"
edition = "2018"

[dependencies]
cstr = "0.1.7"
log = "0.4"
zephyr = { path = "../../rust/zephyr" }
zephyr-macros = { path = "../../rust/zephyr-macros" }
zephyr-logger = { path = "../../rust/zephyr-logger" }
