[package]
name = "rust-app"
version = "0.1.0"
authors = ["Tyler Hall <tyler.hall@lexmark.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
cstr = "0.1.7"
zephyr-sys = { path = "./zephyr-sys" }
zephyr = { path = "./zephyr", features = ["have_std", "have_ztest"] }
zephyr-macros = { path = "./zephyr-macros" }
zephyr-logger = { path = "./zephyr-logger" }
log = "0.4"

[profile.release]
panic = "abort"
lto = true
debug = true
